# bare-bones-socket-chat

./: .gitignore  CMakeLists.txt  README.md  c  client.c  client.cpp  client.out  listener.c  s  server.c  server.cpp  server.out  test.cpp  users.txt
_build/: CMakeCache.txt  Makefile  client  client2  cmake_install.cmake  server  server2
references/: talker.c
src/: client.cpp  client2.cpp  server.cpp  server2.cpp  test.cpp
